# Instradatore

./: .gitignore  README.md  ames_34.yaml  ames_atmos_average.yaml  ames_confronta_stress.yaml  ames_nasa.yaml  ames_pp.yaml  ames_pp.yaml.bak  pyproject.toml
doc/: Makefile  conf.py  fai_documentazione.bat  index.rst  make.bat
doc/source_0/: instradatore.rst  modules.rst
doc/source_1/: add_stress.rst  altitude.rst  fixed.rst  flatting.rst  generic.rst  interp.rst  merge.rst  modules.rst  reduce.rst  split.rst  zdiff.rst
handlers/add/: __init__.py  add.py  add.py.bak  add.py.bak.2
handlers/add_stress/: __init__.py  add_stress.py  add_stress.py.bak  add_stress.py.bak.2  calcola_stress.py  calcola_stress.py.bak
handlers/altitude/: altitude.py  altitude.py.bak
handlers/fixed/: .fixed.py.swp  __init__.py  fixed.py  fixed.py.bak
handlers/flatting/: __init__.py  flatting.py.bak
handlers/generic/: __init__.py  generic.py
handlers/interp/: __init__.py  interp.py  interp.py.bak  interp.sh  repeater.sh
handlers/merge/: __init__.py  merge.py  merge.py.bak
handlers/reduce/: reduce.py  reduce.py.bak  reduce.py.bak.4  riduci.py.bak  riduci.py.bak.2
handlers/sand/: calcola_sand_flux.py.bak
handlers/split/: split.py  split.py.bak  split.sh
handlers/zdiff/: __init__.py  zdiff.py  zdiff.py.bak
instradatore/: __main__.py  __main__.py.bak  router.py  router.py.bak
plugins/add/: add.sh
plugins/add_stress/: add_stress.py
plugins/altitude/: __init__.py  altitude.sh
plugins/fixed/: fixed.py
plugins/flatting/: flatting.py
plugins/generic/: generic.py
(+6 files in other folders)
